Revert "Fix F&B image heights on mobile"
This reverts commit e51c843a7f47df6fb6738d8bdb89c66d898a67d7.

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -210,8 +210,6 @@ body {}
         padding-top: 30px; }
     .features-benefits .carousel-inner {
         padding-bottom: 50px; }
-    .features-benefits .carousel-inner .item-img {
-        min-height: 574px; }
     .features-benefits .carousel-control img {
         padding-top: 32px; }
 @media (min-width: 768px) {
@@ -229,8 +227,6 @@ body {}
         padding-top: 40px; }
     .features-benefits .carousel {
         height: 540px; }
-    .features-benefits .carousel-inner .item-img {
-        min-height: 0; }
     .features-benefits .carousel-indicators {
         bottom: 150px; }
     .features-benefits .carousel-control img {
